--- a/leshan/aqi-server/src/main/resources/webapp/partials/client-detail.html
+++ b/leshan/aqi-server/src/main/resources/webapp/partials/client-detail.html
@@ -11,7 +11,10 @@
 					{{settings.timeout.format}} <span class="caret"></span>
 				</button>
 				<ul class="dropdown-menu dropdown-menu-contentformat" role="menu">
-					<li><a ng-click="settings.timeout.value=5;settings.timeout.format='5s'">5s</a></li>
+					<!--<li><a ng-click="settings.timeout.value=5;settings.timeout.format='5s'">5s</a></li>-->
+					<li><a ng-click="settings.timeout.value=15;settings.timeout.format='15s'">15s</a></li>
+					<li><a ng-click="settings.timeout.value=30;settings.timeout.format='30s'">30s</a></li>
+					<li><a ng-click="settings.timeout.value=60;settings.timeout.format='1min'">1min</a></li>
 					<li><a ng-click="settings.timeout.value=300;settings.timeout.format='5min'">5min</a></li>
 					<li><a ng-click="settings.timeout.value=900;settings.timeout.format='15min'">15min</a></li>
 					<li><a ng-click="settings.timeout.value=1800;settings.timeout.format='30min'">30min</a></li>
